--- a/BACK/package.json
+++ b/BACK/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "mongoose": "^6.2.1"
-  }
+    "mongoose": "^6.2.1",
+    "cors": "^2.8.5"
+  },
+  "type": "module"
 }
